<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="my.cart.activity.RegistrationActivity">

    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:id="@+id/contryContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="@dimen/_15sdp"
        android:paddingTop="@dimen/_2sdp">

        <TextView
            android:id="@+id/countryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_10sdp"
            android:text="@string/country"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/countryInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_toRightOf="@+id/countryTextView"
            android:theme="@style/TextLabel">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/countryEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_country_code"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:inputType="phone"
                android:text=""
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/phoneNumberContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contryContainer"
        android:paddingTop="@dimen/_5sdp">

        <TextView
            android:id="@+id/mobileTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_10sdp"
            android:text="@string/phone_number"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/mobileInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_toRightOf="@+id/mobileTxtView"
            android:theme="@style/TextLabel">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/mobileEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_phone_no"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:text=""
                android:inputType="phone"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_28sdp"
        android:layout_below="@+id/phoneNumberContainer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/register_button_effect"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:onClick="doRegistration"/>

    <include layout="@layout/progressbar" />
</RelativeLayout>
